# katago-onnx-mobile

./: .gitattributes  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/src/main/cpp/katago/cpp/: main.h
android/src/main/cpp/katago/cpp/command/: analysis.cpp
android/src/main/cpp/katago/cpp/neuralnet/: nneval.cpp  nneval.h  onnxbackend.cpp
android/src/main/kotlin/com/justmaker/katago_onnx_mobile/: KataGoEngine.kt  KatagoOnnxMobilePlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/justmaker/katago_onnx_mobile_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: katago_onnx_mobile.podspec
ios/Classes/: KatagoOnnxMobilePlugin.swift
ios/Sources/: KataGoOnnxBridge.h  KataGoOnnxBridge.mm  stubs.cpp
ios/Sources/fake_zip/: zip.h
ios/Sources/katago/cpp/core/: global.h
ios/Sources/katago/cpp/neuralnet/: nneval.cpp  nneval.h  onnxbackend.cpp
lib/: katago_onnx_mobile.dart
lib/src/: inference_engine.dart  katago_engine.dart  liberty_calculator.dart  move_candidate.dart  onnx_engine.dart  onnx_engine_stub.dart  tactical_evaluator.dart
test/: liberty_calculator_test.dart
